[package]
name = "mdbook-open-git-repo"
version = "0.0.2"
authors = ["Emil Thorenfeldt <emt@magenta.dk>", "Jan-Erik Rediger <janerik@fnordig.de>"]
description = "mdbook preprocessor to add a open-on-git-repo link on every page"
keywords = ["mdbook", "markdown"]
license = "MPL-2.0"
homepage = "https://github.com/wonderfulspam/mdbook-open-git-repo"
repository = "https://github.com/wonderfulspam/mdbook-open-git-repo"
edition = "2018"

[dependencies]
mdbook = "0.4.3"
env_logger = "0.7.1"
log = "0.4"
clap = "2.33"
serde_json = "1.0"
toml = "0.5.6"
